--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,22 @@ pandas
 streamlit 
 matplotlib
 numpy
-scikit-learn==0.23.2
-shap
-pathlib 
-xgboost==1.5.0
-numpy
 opencv-python-headless
-Pillow
 streamlit_drawable_canvas
 layout
+spacy
+gensim
+plotnine
+tomotopy
+praw
+wordcloud
+wordninja
+seaborn
+re
+string
+collections
+sklearn
+scipy
+fbpca
+textblob
+
